--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_SECRET=fb0fffcb0bcb71d13d49867ef470e719
 
 ###> doctrine/doctrine-bundle ###
 # Connexion PostgreSQL Render
-DATABASE_URL="postgresql://boutique_francaise_user:Pq8bUtrJmILQwRewwlP8DmONIpKFLf8D@dpg-d3r2dge3jp1c738vqieg-a/boutique_francaise?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a/boutique_francaise_6okf"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
