--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=your-secret-key-here-change-this-in-production
+APP_SECRET=fb0fffcb0bcb71d13d49867ef470e719
 APP_DEBUG=1
 # "Use the local MySQL database with correct credentials (root/root)"
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/boutique_francaise?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a/boutique_francaise_6okf"
 ###< doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://postgres:@127.0.0.1:5432/boutique_francaise?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
