Mise à jour complète du projet : modifications, suppressions et ajouts

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ APP_SECRET=fb0fffcb0bcb71d13d49867ef470e719
 
 ###> doctrine/doctrine-bundle ###
 # Connexion PostgreSQL Render
-DATABASE_URL="${DATABASE_URL}"
+DATABASE_URL="postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a.oregon-postgres.render.com/boutique_francaise_6okf"
+## DATABASE_URL="mysql://root:''@host:3306/boutique_francaise?serverVersion=8.0.32&charset=utf8mb4"
+## DATABASE_URL="postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a/boutique_francaise_6okf"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -16,3 +18,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+
+
+
+
+
+
