--- a/.env.local
+++ b/.env.local
@@ -6,7 +6,4 @@ APP_DEBUG=1
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a/boutique_francaise_6okf"
-###< doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://postgres:@127.0.0.1:5432/boutique_francaise?serverVersion=15&charset=utf8"
-###< doctrine/doctrine-bundle ###
+DATABASE_URL="${DATABASE_URL}"
