Fix: connexion PostgreSQL Render, Dockerfile, et corrections diverses

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - APP_ENV=dev
       - APP_DEBUG=1
       # Remote PostgreSQL (Render) with sslmode=require
-      - DATABASE_URL=postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a.oregon-postgres.render.com/boutique_francaise_6okf?sslmode=require
+      - DATABASE_URL=DATABASE_URL=postgresql://boutique_francaise_6okf_user:wxCWqnVtHvxTR8ful0z5rRKDiFFLPPdz@dpg-d3t7507gi27c73cn0ep0-a.oregon-postgres.render.com/boutique_francaise_6okf?sslmode=require
     depends_on:
       - mailer
     volumes:
