--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=fb0fffcb0bcb71d13d49867ef470e719
 ###< symfony/framework-bundle ###
 
