fix: correction de la configuration du DebugBundle

--- a/config/packages/debug.yaml
+++ b/config/packages/debug.yaml
@@ -1,5 +1,8 @@
 when@dev:
     debug:
-        # Forwards VarDumper Data clones to a centralized server allowing to inspect dumps on CLI or in your browser.
-        # See the "server:dump" command to start a new server.
-        dump_destination: "tcp://%env(VAR_DUMPER_SERVER)%"
+        # Enables the dump() function for development environment
+        dump_destination: "php://stderr"
+        
+when@test:
+    debug:
+        dump_destination: "php://stderr"
